# Engagement-Agent

./: .gitignore  README.md  example.env  pyproject.toml
db/: chroma.sqlite3
src/Engagement_Agent/: crew.py  main.py
src/Engagement_Agent/config/: agents.yaml  tasks.yaml
src/Engagement_Agent/tools/: message_tool.py
